# PackageManager

./: CMakeLists.txt  LICENSE  Module.cpp  Module.h  NOTICE  PackageManager.conf.in  PackageManager.config  PackageManager.cpp  PackageManager.h  PackageManagerPlugin.json  README.md
ExternalServiceImplementation/: ExternalServiceImplementation.cpp  README.md
ExternalServiceImplementation/ExampleClient/: CMakeLists.txt  ExternalServiceExampleClient.cpp
FireboltImplementation/: FireboltImplementation.cpp
FireboltImplementation/ExampleClient/: CMakeLists.txt  PackageManagerClient.cpp
TestImplementation/: README.md  TestImplementation.cpp
doc/: PackageManagerPlugin.md
